Fix overflow de connaissance et hobby

--- a/src/styles/components/a-propos.scss
+++ b/src/styles/components/a-propos.scss
@@ -25,6 +25,10 @@
     .bloc-profil{
         padding: 80px 0 0 0;
 
+        @media screen and (max-width: $breakpoint-sm) {
+            padding: 0;
+         }
+
         h1,h4{
             @media screen and (max-width: $breakpoint-sm) {
                 text-align: center;
@@ -82,7 +86,10 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        
+
+        @media screen and (max-width: $breakpoint-sm) {
+           justify-content: center;
+         }
 
         img:nth-child(1){
             position: absolute;
@@ -102,7 +109,7 @@
             }
             @media screen and (max-width: $breakpoint-sm) {
                 height: 50%;  
-                top: 35%;
+                top: 60%;
                 right: auto;
             }
             
@@ -145,7 +152,7 @@
             }
             @media screen and (max-width: $breakpoint-sm) {
                 height: 60%;  
-                top: 15%;
+                top: 30%;
                 right: auto;
             }
 
@@ -172,20 +179,18 @@
 
         padding: 120px 0;
 
-
-
         @media screen and (max-width: $breakpoint-lg) {
             grid-template-columns: 1fr 1fr;    
-            gap: 60px        
+            gap: 60px;      
+              
         }
         @media screen and (max-width: $breakpoint-md) {
             display: flex;    
             flex-direction: column;       
             width: 100%;   
-            gap: 40px
+            gap: 40px;
+            overflow: hidden;
         }
-
-        
 
         div{
             display: flex;
@@ -239,15 +244,17 @@
         gap: 120px;
 
         padding: 120px 0;
+
         
         @media screen and (max-width: $breakpoint-lg) {
             grid-template-columns: 1fr 1fr;    
-            gap: 80px;       
+            gap: 80px;     
         }
         @media screen and (max-width: $breakpoint-md) {
             grid-template-columns: 1fr;    
             width: 100%;  
-            gap: 40px;     
+            gap: 40px;    
+            overflow: hidden; 
         }
 
 
@@ -259,6 +266,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            
             @media screen and (max-width: $breakpoint-sm) {
                 padding: 25px 15px 15px 15px;
              }
